--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-https://github.com/LandgrafHomyak/cw3_kamikadze_bot-cpython/releases/download/v0.0.0rc0/cw3_kamikadze_bot-0.0rc0-py3-none-any.whl
+git+https://github.com/LandgrafHomyak/cw3_kamikadze_bot-cpython.git@v1.0rc1
